# app-poly-gitops-crewai

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
src/auto_k8s_pilot/: api.py  flow_runner.py  settings.py
src/auto_k8s_pilot/observability/: __init__.py  logger.py  tracing.py
tests/: conftest.py  test_api.py  test_config.py  test_flow_runner.py  test_settings.py
